Updated class of the active instrument

--- a/TODO
+++ b/TODO
@@ -3,8 +3,7 @@
 - TODO NEXT
 ============
 
-- Make responsive
 - Configuration files for nginx
-- Add pattern buttons, add two patterns
+- add two patterns
 - Add keyboard legend
 - Make video
