Updated TODO during meeting

--- a/TODO
+++ b/TODO
@@ -1,9 +1,9 @@
-- maybe with QR or facebook sharing
 
 - TODO NEXT
 ============
 
 - Configuration files for nginx
-- add two patterns
+- add one patterns
 - Add keyboard legend
 - Make video
+- QR or facebook sharing
